WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
159909
[GTK] ENABLE_OPENGL=OFF build broken since
r201802
https://bugs.webkit.org/show_bug.cgi?id=159909
Summary
[GTK] ENABLE_OPENGL=OFF build broken since r201802
Carlos Alberto Lopez Perez
Reported
2016-07-18 16:44:41 PDT
Since
r201802
building WebKitGTK+ with -DENABLE_OPENGL=OFF fails with: ../../Source/WebKit2/WebProcess/WebPage/LayerTreeHost.cpp:44:38: error: implicit instantiation of undefined template 'WTF::RefPtr<WebKit::LayerTreeHost>' RefPtr<LayerTreeHost> LayerTreeHost::create(WebPage& webPage) ^ ../../Source/WTF/wtf/Forward.h:35:28: note: template is declared here template<typename T> class RefPtr; ^ ../../Source/WebKit2/WebProcess/WebPage/LayerTreeHost.cpp:54:12: error: implicit instantiation of undefined template 'WTF::RefPtr<WebKit::LayerTreeHost>' return nullptr; ^ ../../Source/WTF/wtf/Forward.h:35:28: note: template is declared here template<typename T> class RefPtr; ^ 2 errors generated.
Attachments
Patch
(1.19 KB, patch)
2016-07-18 16:49 PDT
,
Carlos Alberto Lopez Perez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Alberto Lopez Perez
Comment 1
2016-07-18 16:49:56 PDT
Created
attachment 283961
[details]
Patch
WebKit Commit Bot
Comment 2
2016-07-18 17:21:18 PDT
Comment on
attachment 283961
[details]
Patch Clearing flags on attachment: 283961 Committed
r203384
: <
http://trac.webkit.org/changeset/203384
>
WebKit Commit Bot
Comment 3
2016-07-18 17:21:22 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug