[GTK] ENABLE_OPENGL=OFF build broken since r201802 https://bugs.webkit.org/show_bug.cgi?id=159909

Reviewed by Antonio Gomes.

* WebProcess/WebPage/LayerTreeHost.h: Add missing include.


Canonical link: https://commits.webkit.org/178068@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@203384 268f45cc-cd09-0410-ab3c-d52691b4dbfc